fix contact page gap

--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -17,7 +17,7 @@ p {
   margin-top: 4.87rem;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
   /* display: flex;
   flex-direction: column;
   gap: 1.6875rem;
@@ -47,7 +47,7 @@ p .desc {
 .main-contact {
   display: flex;
   justify-content: center;
-  flex: 1;
+  /* flex: 1; */
 }
 
 .form-container {
